--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <div class="nav-bar">
-        <h1 class="title">Coffee</h1>
-        <p>Coffe Shop</p>
+        <h1 class="title">A Dieta Mañana</h1>
+        <p>&mdash;Hoy comemos, ¡mañana nos preocupamos!&mdash;</p>
          <ul class="navegador">
             <li><a href="#">Home</a></li>
             <li><a href="#">Cheff</a></li>
@@ -20,8 +20,24 @@
     </div>
 
     <div class="container">
-        <h1 class="title-1">Siempre con los mejores productos, los mas frescos y las bebidas bien frias. Para ver el menu precione aqui:</h1>
-        <div class="menu"><a href="Enlaces/menu.html">Menu</a></div>
+
+        <h1 class="title-1">Un paraíso culinario para los amantes de la comida reconfortante y las porciones generosas. Aquí, la culpa no existe y siempre hay espacio para el postre. Para ver el menu precione aqui:</h1>
+        <div class="menu">
+            <a href="Enlaces/menu.html">Menu</a>
+            <div class="logo">
+                <figure>
+                    <h1 class="title-2">A Dieta Mañana</h1>
+                    <img src="Enlaces/images/logo.jpg" alt="burger">
+                    <h1>Horarios:</h1>
+                    <p>Direccion: Calle del Pecado, 123, Ciudad de la Tentacion</p>
+                    <p>Lunes a Domingo - 11:00am a 11:00pm</p>
+                    <p>Sitio Web: www.adietamañana.com</p>
+                    <p>Telefono: +123 456 7890</p>
+                </figure>
+
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
