Se creo las tablas para el menu

--- a/Enlaces/menu.html
+++ b/Enlaces/menu.html
@@ -9,131 +9,61 @@
     <title>Menu</title>
 </head>
 <body>
-    <div class="menu">
-        <div class="heading">
-            <h1>Restaurant Food</h1>
-            <h3>&mdash;Menu&mdash;</h3>
-            <a href="../index.html">Back</a>
-        </div>
-
-        <div class="food-items">
-            <img src="images/burger.jpg" alt="burger">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Burger</h5>
-                    <h5 class="price">$12</h5>
-                </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasiure nemo opio? Tempore, quos ipsum.</p>
-                <button>Buy</button>
-            </div>
-
-        </div>
-
-        <div class="food-items">
-            <img src="images/burger.jpg" alt="burger">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Burger</h5>
-                    <h5 class="price">$12</h5>
-                </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasiure nemo opio? Tempore, quos ipsum.</p>
-                <button>Buy</button>
-            </div>
-
-        </div>
-
-        <div class="food-items">
-            <img src="images/burger.jpg" alt="burger">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Burger</h5>
-                    <h5 class="price">$12</h5>
-                </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasiure nemo opio? Tempore, quos ipsum.</p>
-                <button>Buy</button>
-            </div>
-
-        </div>
-
-        <div class="food-items">
-            <img src="images/burger.jpg" alt="burger">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Burger</h5>
-                    <h5 class="price">$12</h5>
-                </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasiure nemo opio? Tempore, quos ipsum.</p>
-                <button>Buy</button>
-            </div>
-
-        </div>
-
-        <div class="food-items">
-            <img src="images/burger.jpg" alt="burger">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Burger</h5>
-                    <h5 class="price">$12</h5>
-                </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasiure nemo opio? Tempore, quos ipsum.</p>
-                <button>Buy</button>
-            </div>
-
-        </div>
-
-        <div class="food-items">
-            <img src="images/burger.jpg" alt="burger">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Burger</h5>
-                    <h5 class="price">$12</h5>
-                </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasiure nemo opio? Tempore, quos ipsum.</p>
-                <button>Buy</button>
-            </div>
-
-        </div>
-
-        <div class="food-items">
-            <img src="images/burger.jpg" alt="burger">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Burger</h5>
-                    <h5 class="price">$12</h5>
-                </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasiure nemo opio? Tempore, quos ipsum.</p>
-                <button>Buy</button>
-            </div>
-
-        </div>
-
-        <div class="food-items">
-            <img src="images/burger.jpg" alt="burger">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Burger</h5>
-                    <h5 class="price">$12</h5>
-                </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasiure nemo opio? Tempore, quos ipsum.</p>
-                <button>Buy</button>
-            </div>
-
-        </div>
-
-        <div class="food-items">
-            <img src="images/burger.jpg" alt="burger">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Burger</h5>
-                    <h5 class="price">$12</h5>
-                </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasiure nemo opio? Tempore, quos ipsum.</p>
-                <button>Buy</button>
-            </div>
-
-        </div>
-
+    <div class="heading">
+        <h1>Restaurant Food</h1>
+        <h3>&mdash;Menu&mdash;</h3>
+        <a href="../index.html">Back</a>
     </div>
 
+    <div class="menu">
+        <h2>Platos Iconicos:</h2>
+        <table>
+            <tr>
+                <td><figure><img src="images/TorrePancakes.jpg" alt="pancake"><br><h2>La Torre Inestable de Pancakes</h2><b>Una temblorosa torre de 10 pancakes gigantes, intercalados con nutella, fresas, plátanos y chispas de chocolate, coronada con nata montada y salsa de caramelo. ¡Diviértete tratando de no hacerla colapsar mientras la devoras!<br>Precio: $19</b></figure></td>
+                <td><figure><img src="images/burrito-gigante.jpg" alt="burrito"><br><h2>El Burrito Exagerado </h2><b>Un colosal burrito del tamaño de tu antebrazo, relleno de carne asada, arroz, frijoles, guacamole, crema agria, queso y pico de gallo. ¡El desafío está en no derramar ni una gota mientras te rindes ante su sabor explosivo!<br>Precio: $22</b></figure></td>
+            </tr>
+        </table>
+    </div>
+
+    <br>
+
+    <div class="menu">
+        <h2>Aperitivos:</h2>
+        <table>
+            <tr>
+                <td><figure><img src="images/nachos.jpg" alt="aperitivo"><br><h2>Nachos Sin Remordimientos </h2><b>Totopos de maíz, queso fundido, frijoles refritos, jalapeños, guacamole y pico de gallo.<br>Precio: $10</b></figure></td>
+                <td><figure><img src="images/alitas-pollo.jpg" alt="aperitivo"><br><h2>Alitas Placer Culpable </h2><b>Alitas de pollo bañadas en salsa BBQ o picante, acompañadas de apio y aderezo de queso azul.<br>Precio: $12</b></figure></td>
+                <td><figure><img src="images/corquetas.jpg" alt="aperitivo"><br><h2>Croquetas de Jamón y Queso </h2><b>Crujientes croquetas rellenas de jamón serrano y queso mozzarella, con salsa de tomate casera.<br>Precio: $9</b></figure></td>
+            </tr>
+        </table>
+
+        <table>
+            <tr>
+                <td><figure><img src="images/dip-espinaca.jpg" alt="aperitivo"><br><h2>Dip de Espinacas y Alcachofa </h2><b>Mezcla cremosa de espinacas, alcachofas y quesos, servido caliente con pan pita tostado.<br>Precio: $11</b></figure></td>
+                <td><figure><img src="images/calamares.jpg" alt="aperitivo"><br><h2>Calamares a la Romana </h2><b>Calamares frescos, empanizados y fritos, con salsa tártara casera<br>Precio: $13</b></figure></td>
+            </tr>
+        </table>
+    </div>
+
+    <br>
+
+    <div class="menu">
+        <h2>Platos Iconicos:</h2>
+        <table>
+            <tr>
+                <td><figure></figure></td>
+                <td><figure></figure></td>
+                <td><figure></figure></td>
+            </tr>
+        </table>
+        
+        <table>
+            <tr>
+                <td><figure></figure></td>
+                <td><figure></figure></td>
+                <td><figure></figure></td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
