Agregue las bebidas.

--- a/Enlaces/menu.html
+++ b/Enlaces/menu.html
@@ -88,19 +88,19 @@
     <br>
 
     <div class="menu">
-        <h2>Platos Iconicos:</h2>
+        <h2>Bebidas:</h2>
         <table>
             <tr>
-                <td><figure></figure></td>
-                <td><figure></figure></td>
-                <td><figure></figure></td>
+                <td><figure><img src="images/bebidas/pina-colada.jpg" alt="bebidas"><br><h2>El Tsunami Tropical</h2><b>Un cóctel vibrante y refrescante de ron, piña colada, jugo de naranja y granadina, servido en una copa gigante con sombrilla y una rodaja de piña. ¡La ola perfecta para ahogar tus remordimientos!<br>Precio: $13</b></figure></td>
+                <td><figure><img src="images/bebidas/vodka.jpg" alt="bebidas"><br><h2>La Pócima del Olvido</h2><b>Vodka, curaçao azul, limonada y un toque de jengibre, mezclados en una copa misteriosa que emite humo. ¡Bébela y olvida que prometiste hacer dieta!</b><br>Precio: $12</figure></td>
+                <td><figure><img src="images/bebidas/batido.jpg" alt="bebidas"><br><h2>El Licuado Anti-Dieta</h2><b>Un provocativo batido de helado de chocolate, galletas Oreo, trozos de brownie, sirope de caramelo y nata montada. ¡Quién necesita contar calorías cuando puedes contar sonrisas!<br>Precio: $9</b></figure></td>
             </tr>
         </table>
         
         <table>
             <tr>
-                <td><figure></figure></td>
-                <td><figure></figure></td>
+                <td><figure><img src="images/bebidas/mocktail.jpg" alt="bebidas"><br><h2>La Explosión Efervescente</h2><b>Un mocktail sin alcohol que combina limonada rosa, soda de fresa y trocitos de fruta, coronado con chispas de colores y pop rocks que estallan en tu boca. ¡Porque la diversión no siempre necesita alcohol!<br>Precio: $8</b></figure></td>
+                <td><figure><img src="images/bebidas/smoothie-saludable.jpg" alt="bebidas"><br><h2>El Smoothie de la Ironía</h2><b>Una mezcla burlona de espinacas, kale, aguacate, manzana, plátano y leche de almendras, acompañada de una sonrisa socarrona. ¡Porque siempre hay alguien que quiere ser saludable en el paraíso de la comida reconfortante!<br>Precio: $7</b></figure></td>
             </tr>
         </table>
     </div>
